<resources>
    <string name="app_name">ललितपुर महानगरपालिका</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="title_home">गृहपृष्ठ</string>
    <string name="title_dashboard">समाचार </string>
    <string name="title_notifications">जनप्रतीनधी </string>
    <string name="title_menu">मेनु </string>
    <string name="title_activity_home_tab">HomeTab</string>
    <string name="tab_text_1">सेवाग्राही</string>
    <string name="tab_text_2">सेवा प्रदायक</string>
    <string name="tab_text_3">अन्य</string>
    <string name="name">ललितपुर महानगरपालिका</string>
    <string name="new_user">New User?</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_email">Enter Email</string>
</resources>
