<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:src="@drawable/logo"
        android:layout_alignParentTop = "true"
        android:layout_centerHorizontal = "true"
        />

    <TextView
        android:id="@+id/Appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_centerHorizontal = "true"
        android:layout_below="@+id/imageView"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/Appname"
        android:hint="@string/enter_email"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        />




    <EditText
        android:id="@+id/passwordin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:inputType="textPassword"
        android:layout_below="@+id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:hint="@string/enter_password"/>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/passwordin"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/login"
        android:onClick="login"
        android:layout_alignParentRight="true" />

    <Button
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/NewUser"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:text="@string/signup"
        android:layout_marginStart="20dp" />

    <TextView
        android:id="@+id/NewUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:text="@string/new_user"
        android:textSize="18sp"
        android:layout_marginTop="15dp"/>

</RelativeLayout>
